--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "revaljs",
-  "version": "0.9.0",
-  "description": "An extremely lightweight Javascript library to build web apps",
+  "version": "0.10.0",
+  "description": "A front-end library created just for the sake of being light",
   "main": "reval.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
