--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "revaljs",
-  "version": "0.16.2",
+  "version": "0.17.0",
   "description": "React-based front-end library code golf",
   "main": "reval.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx terser reval.js -c -m -o reval.min.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/nguyenphuminh/reval/issues"
   },
-  "homepage": "https://github.com/nguyenphuminh/reval#readme"
+  "homepage": "https://github.com/nguyenphuminh/reval#readme",
+  "devDependencies": {
+    "terser": "^5.38.1"
+  }
 }
